# RustProject

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
src/: main.rs
src/controller/: client.rs  mod.rs  user.rs
src/entity/: client.rs  mod.rs  prelude.rs  user.rs
src/middleware/: jwt.rs
src/migration/: Cargo.toml
src/migration/src/: m20220101_000001_create_table.rs
