[package]
name = "SaraSyste"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-service = "2.0.3"

dotenv = "0.15.0"
serde_json = "1.0.140"
serde = "1.0.219"
sea-orm = {version = "1.1.11",features = ["macros", "runtime-actix-rustls", "sqlx-postgres"]}
sea-orm-migration = "1.1.11"
env_logger = "0.11.8"
chrono = "0.4.41"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
futures-util = "0.3.31"
actix-cors = "0.7.1"
#migrations 
migration = {path = "./src/migration/"}
uuid = {version="1.16.0",features=["v4"]}
